[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
ndarray = { version = "0.15.0", features = ["blas"] }
blas-src = { version = "0.8", features = ["accelerate"] }  # for macOS
argh = "0.1.10"